<resources>
    <string name="app_name">disp-moveis-3</string>
    <string name="headerText">TaskHub</string>
    <string name="h1Text">Seja organizado.</string>
    <string name="h2Text">Começe agora.</string>
    <string name="imgDescription">Desenho de garota utilizando o computador</string>
    <string name="button1">+</string>
    <string name="button2">Ver minhas tarefas</string>
    <string name="button3">Deletar Tarefas</string>
    <string name="createHeaderText">Adicione uma Tarefa</string>
    <string name="taskName"> Nome:</string>
    <string name="dateTask"> Data:</string>
    <string name="ugerncyTask"> Nível de Urgência:</string>
    <string name="optionLeve">Leve</string>
    <string name="optionImportant">Importante</string>
    <string name="optionUrgent">Urgente</string>
    <string name="add">ADICIONAR</string>
    <string name="checkTask">Feito</string>

</resources>